重写了一遍N皇后，所有结果版本+boolean的剪枝版本